# website-hakyll

./: .gitignore  README.md  site.cabal  stack.yaml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build_and_publish.yaml  publish.yaml  publish.yaml~
content/: contact.md  pubs.md
content/blog/: deploying_a_hakyll_site_on_circleci_2.0.md
templates/: default.html
