cabal-version: 2.4
name:          site
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Andrew Dawson
maintainer:    ajdawson@acm.org
copyright:     2017 Andrew Dawson
homepage:      https://github.com/ajdawson/website-hakyll
category:      Web
build-type:    Simple

extra-source-files:
  README.md

executable site
  main-is:          site.hs
  default-language: Haskell2010
  ghc-options:      -threaded
  build-depends:
    , base   >= 4.14 && < 5
    , hakyll >= 4.15 && < 4.17
